added dark mode

--- a/movie-rentals/src/style.css
+++ b/movie-rentals/src/style.css
@@ -1,8 +1,6 @@
-.rating {
-  background: green;
-  border-radius: 12px;
-  color: white;
-  width: 8%;
-  padding: 10px;
+.lightThemeButton {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
 }
 /*# sourceMappingURL=style.css.map */
